UI 컨트롤러 모듈 추가 및 로그 테이블 구조 단순화

--- a/index.html
+++ b/index.html
@@ -168,11 +168,7 @@
                                     <th scope="col" width="30px"><input type="checkbox" id="selectAllPackets"></th>
                                     <th scope="col" width="80px">시간</th>
                                     <th scope="col" width="40px">Dir</th>
-                                    <th scope="col" width="50px">Slave</th>
-                                    <th scope="col" width="80px">Func</th>
                                     <th scope="col">데이터</th>
-                                    <th scope="col" width="60px">CRC</th>
-                                    <th scope="col" width="60px">상태</th>
                                 </tr>
                             </thead>
                             <tbody id="logTableBody">
@@ -198,7 +194,7 @@
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="hexSend">
+                                    <input class="form-check-input" type="checkbox" id="hexSend" checked>
                                     <label class="form-check-label" for="hexSend">
                                         HEX Send
                                     </label>
