--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
 
                 <!-- TCP/IP Settings (Initially hidden) -->
                 <div id="tcpSettingsContainer" style="display: none;">
+                    <h6 class="mt-3 mb-2 text-secondary">WebSocket Bridge</h6>
+                    <div class="mb-2">
+                        <label for="wsServerUrl" class="form-label">WebSocket Server URL</label>
+                        <div class="input-group input-group-sm">
+                            <input type="text" class="form-control form-control-sm bg-dark text-light" id="wsServerUrl" value="ws://localhost:8080/modbus">
+                            <button class="btn btn-outline-secondary btn-sm" type="button" id="saveWsUrlBtn" title="Save WebSocket URL"><i class="bi bi-save"></i></button>
+                        </div>
+                        <small class="form-text text-muted">WebSocket 서버 URL을 설정하고 저장 버튼을 클릭하세요.</small>
+                    </div>
+                    
                     <h6 class="mt-3 mb-2 text-secondary">Remote Modbus Server</h6>
                     <div class="mb-2">
                         <label for="ipAddress" class="form-label">IP Address or Node Name</label>
