cursor 용으로 버그 수정

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
     <title>Web Modbus Monitor</title>
     <meta name="description" content="Modbus-RTU 모니터링 및 디버깅을 위한 웹 시리얼 애플리케이션">
     <meta name="theme-color" content="#212529">
-    <link rel="manifest" href="./src/manifest.json">
-    <link rel="apple-touch-icon" href="./src/icons/icon-192x192.png">
-    <link rel="stylesheet" href="./src/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./src/css/styles.css">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="apple-touch-icon" href="./assets/icons/icon-192x192.png">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="bg-dark text-light">
     <!-- Header -->
@@ -281,7 +281,7 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
