--- a/src/offline.html
+++ b/src/offline.html
@@ -59,7 +59,7 @@
     <script>
         // 온라인 상태가 되면 자동으로 메인 페이지로 리디렉션
         window.addEventListener('online', () => {
-            window.location.href = '../index.html';
+            window.location.href = '../src/index.html';
         });
     </script>
 </body>
