다크, 라이트 테마 적용

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title> Modbus Protocol Analyzer</title>
     <meta name="description" content="Real-time Modbus protocol debugging and monitoring dashboard">
 </head>
-<body class="bg-dark-bg text-dark-text-primary font-mono antialiased">
+<body class="font-mono antialiased">
     <div id="app"></div>
 </body>
 </html>
