--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Modbus Protocol Analyzer</title>
   <link rel="stylesheet" href="./src/styles/index.css">
 </head>
-<body class="bg-dark-background text-dark-text-primary min-h-screen">
+<body class="min-h-screen">
   <div id="app" class="min-h-screen"></div>
   <script type="module" src="./src/index.ts"></script>
 </body>
